@@ -469,6 +469,7 @@ public interface StorageServiceMBean extends NotificationEmitter
     // allows a node that have been started without joining the ring to join it
     public void joinRing() throws IOException;
     public boolean isJoined();
+    public boolean isSurveyMode();
 
     @Deprecated
     public int getExceptionCount();
